--- a/waybar/config
+++ b/waybar/config
@@ -36,8 +36,8 @@
         // "thermal-zone": 2,
         // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
         "critical-threshold": 60,
-        // "format-critical": "{temperatureC}°C {icon}",
-        "format": "{temperatureC}°C {icon}",
+        "format-critical": "{temperatureC}°C {icon}",
+        "format": "{temperatureC}°C {temperatureF}°F {icon}",
         "format-icons": ["", "", ""]
     },
     "pulseaudio": {
