--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -57,7 +57,17 @@ window:
   # Values for `decorations`:
   #     - full: Borders and title bar
   #     - none: Neither borders nor title bar
+  #
+  # Values for `decorations` (macOS only):
+  #     - transparent: Title bar, transparent background and title bar buttons
+  #     - buttonless: Title bar, transparent background and no title bar buttons
   decorations: none
+
+  # Background opacity
+  #
+  # Window opacity as a floating point number from `0.0` to `1.0`.
+  # The value `0.0` is completely transparent and `1.0` is opaque.
+  opacity: 0.8
 
   # Startup Mode (changes require restart)
   #
@@ -66,6 +76,8 @@ window:
   #   - Maximized
   #   - Fullscreen
   #
+  # Values for `startup_mode` (macOS only):
+  #   - SimpleFullscreen
   #startup_mode: Windowed
 
   # Window title
@@ -74,14 +86,14 @@ window:
   # Allow terminal applications to change Alacritty's window title.
   dynamic_title: true
 
-  # Window class
+  # Window class (Linux/BSD only):
   class:
     # Application instance name
     instance: Alacritty
     # General application class
     general: Alacritty
 
-  # GTK theme variant
+  # GTK theme variant (Linux/BSD only)
   #
   # Override the variant of the GTK theme. Commonly supported values are `dark`
   # and `light`. Set this to `None` to use the default theme variant.
@@ -90,7 +102,7 @@ window:
 scrolling:
   # Maximum number of lines in the scrollback buffer.
   # Specifying '0' will disable scrolling.
-  history: 100000
+  history: 10000
 
   # Scrolling distance multiplier.
   #multiplier: 3
@@ -102,7 +114,9 @@ font:
     # Font family
     #
     # Default:
+    #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
+    #   - (Windows) Consolas
     family: Hack Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
@@ -142,7 +156,7 @@ font:
     #style: Bold Italic
 
   # Point size
-  size: 8.5
+  size: 9.5
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
@@ -158,145 +172,109 @@ font:
   #  x: 0
   #  y: 0
 
+  # Thin stroke font rendering (macOS only)
+  #
+  # Thin strokes are suitable for retina displays, but for non-retina screens
+  # it is recommended to set `use_thin_strokes` to `false`.
+  #use_thin_strokes: true
+
+  # Use built-in font for box drawing characters.
+  #
+  # If `true`, Alacritty will use a custom built-in font for box drawing
+  # characters (Unicode points 2500 - 259f).
+  #
+  #builtin_box_drawing: true
+
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
 
-# Colors (Tomorrow Night)
+# Colors (Catppuccin Macchiato)
 colors:
   # Default colors
   primary:
-    background: '#202734'
-    foreground: '#CBCCC6'
-
+    background: '#1E1E2E' # base
+    foreground: '#CDD6F4' # text
     # Bright and dim foreground colors
-    #
-    # The dimmed foreground color is calculated automatically if it is not
-    # present. If the bright foreground color is not set, or
-    # `draw_bold_text_with_bright_colors` is `false`, the normal foreground
-    # color will be used.
-    #dim_foreground: '#828482'
-    #bright_foreground: '#eaeaea'
+    dim_foreground: '#CDD6F4' # text
+    bright_foreground: '#CDD6F4' # text
 
   # Cursor colors
-  #
-  # Colors which should be used to draw the terminal cursor.
-  #
-  # Allowed values are CellForeground/CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #cursor:
-  #  text: CellBackground
-  #  cursor: CellForeground
-
-  # Vi mode cursor colors
-  #
-  # Colors for the cursor when the vi mode is active.
-  #
-  # Allowed values are CellForeground/CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #vi_mode_cursor:
-  #  text: CellBackground
-  #  cursor: CellForeground
+  cursor:
+    text: '#1E1E2E' # base
+    cursor: '#F5E0DC' # rosewater
+  vi_mode_cursor:
+    text: '#1E1E2E' # base
+    cursor: '#B4BEFE' # lavender
 
   # Search colors
-  #
-  # Colors used for the search bar and match highlighting.
-  #search:
-    # Allowed values are CellForeground/CellBackground, which reference the
-    # affected cell, or hexadecimal colors like #ff00ff.
-    #matches:
-    #  foreground: '#000000'
-    #  background: '#ffffff'
-    #focused_match:
-    #  foreground: '#ffffff'
-    #  background: '#000000'
-
-    #bar:
-    #  background: '#c5c8c6'
-    #  foreground: '#1d1f21'
+  search:
+    matches:
+      foreground: '#1E1E2E' # base
+      background: '#A6ADC8' # subtext0
+    focused_match:
+      foreground: '#1E1E2E' # base
+      background: '#A6E3A1' # green
+    bar:
+      foreground: '#1E1E2E' # base
+      background: '#A6ADC8' # subtext0
 
   # Keyboard regex hints
-  #hints:
-    # First character in the hint label
-    #
-    # Allowed values are CellForeground/CellBackground, which reference the
-    # affected cell, or hexadecimal colors like #ff00ff.
-    #start:
-    #  foreground: '#1d1f21'
-    #  background: '#e9ff5e'
-
-    # All characters after the first one in the hint label
-    #
-    # Allowed values are CellForeground/CellBackground, which reference the
-    # affected cell, or hexadecimal colors like #ff00ff.
-    #end:
-    #  foreground: '#e9ff5e'
-    #  background: '#1d1f21'
-
-  # Line indicator
-  #
-  # Color used for the indicator displaying the position in history during
-  # search and vi mode.
-  #
-  # By default, these will use the opposing primary color.
-  #line_indicator:
-  #  foreground: None
-  #  background: None
+  hints:
+    start:
+      foreground: '#1E1E2E' # base
+      background: '#F9E2AF' # yellow
+    end:
+      foreground: '#1E1E2E' # base
+      background: '#A6ADC8' # subtext0
 
   # Selection colors
-  #
-  # Colors which should be used to draw the selection area.
-  #
-  # Allowed values are CellForeground/CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #selection:
-  #  text: CellBackground
-  #  background: CellForeground
+  selection:
+    text: '#1E1E2E' # base
+    background: '#F5E0DC' # rosewater
 
   # Normal colors
   normal:
-    black: '#191E2A'
-    red: '#FF3333'
-    green: '#BAE67E'
-    yellow: '#FFA759'
-    blue: '#73D0FF'
-    magenta: '#FFD580'
-    cyan: '#95E6CB'
-    white: '#C7C7C7'
+    black:   '#45475A' # surface1
+    red:     '#F38BA8' # red
+    green:   '#A6E3A1' # green
+    yellow:  '#F9E2AF' # yellow
+    blue:    '#89B4FA' # blue
+    magenta: '#F5C2E7' # pink
+    cyan:    '#94E2D5' # teal
+    white:   '#BAC2DE' # subtext1
 
   # Bright colors
   bright:
-    black: '#7f7f7f'
-    red: '#F27983'
-    green: '#A6CC70'
-    yellow: '#FFCC66'
-    blue: '#5CCFE6'
-    magenta: '#FFEE99'
-    cyan: '#95E6CB'
-    white: '#FFFFFF'
+    black:   '#585B70' # surface2
+    red:     '#F38BA8' # red
+    green:   '#A6E3A1' # green
+    yellow:  '#F9E2AF' # yellow
+    blue:    '#89B4FA' # blue
+    magenta: '#F5C2E7' # pink
+    cyan:    '#94E2D5' # teal
+    white:   '#A6ADC8' # subtext0
 
   # Dim colors
-  #
-  # If the dim colors are not set, they will be calculated automatically based
-  # on the `normal` colors.
-  #dim:
-  #  black:   '#131415'
-  #  red:     '#864343'
-  #  green:   '#777c44'
-  #  yellow:  '#9e824c'
-  #  blue:    '#556a7d'
-  #  magenta: '#75617b'
-  #  cyan:    '#5b7d78'
-  #  white:   '#828482'
+  dim:
+    black:   '#45475A' # surface1
+    red:     '#F38BA8' # red
+    green:   '#A6E3A1' # green
+    yellow:  '#F9E2AF' # yellow
+    blue:    '#89B4FA' # blue
+    magenta: '#F5C2E7' # pink
+    cyan:    '#94E2D5' # teal
+    white:   '#BAC2DE' # subtext1
 
-  # Indexed Colors
+  indexed_colors:
+    - { index: 16, color: '#FAB387' }
+    - { index: 17, color: '#F5E0DC' }
+
+  # Transparent cell backgrounds
   #
-  # The indexed colors include all colors from 16 to 256.
-  # When these are not set, they're filled with sensible defaults.
-  #
-  # Example:
-  #   `- { index: 16, color: '#ff00ff' }`
-  #
-  #indexed_colors: []
+  # Whether or not `window.opacity` applies to all cell backgrounds or only to
+  # the default background. When set to `true` all cells will be transparent
+  # regardless of their background color.
+  #transparent_background_colors: false
 
 # Bell
 #
@@ -339,30 +317,24 @@ colors:
   #
   #command: None
 
-# Background opacity
-#
-# Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.8
-
-#selection:
+selection:
   # This string contains all characters that are used as separators for
   # "semantic words" in Alacritty.
-  #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
+  semantic_escape_chars: ",│`|:\"' ()[]{}<>\t_+=;."
 
   # When set to `true`, selected text will be copied to the primary clipboard.
   #save_to_clipboard: false
 
-#cursor:
+cursor:
   # Cursor style
-  #style:
+  style:
     # Cursor shape
     #
     # Values for `shape`:
     #   - ▇ Block
     #   - _ Underline
     #   - | Beam
-    #shape: Block
+    shape: Block
 
     # Cursor blinking state
     #
@@ -371,7 +343,7 @@ background_opacity: 0.8
     #   - Off: Disable blinking by default
     #   - On: Enable blinking by default
     #   - Always: Force the cursor to always blink
-    #blinking: Off
+    blinking: On
 
   # Vi mode cursor style
   #
@@ -382,7 +354,7 @@ background_opacity: 0.8
   #vi_mode_style: None
 
   # Cursor blinking interval in milliseconds.
-  #blink_interval: 750
+  blink_interval: 750
 
   # If this is `true`, the cursor will be rendered as a hollow box when the
   # window is not focused.
@@ -393,7 +365,7 @@ background_opacity: 0.8
   #thickness: 0.15
 
 # Live config reload (changes require restart)
-#live_config_reload: true
+live_config_reload: true
 
 # Shell
 #
@@ -402,7 +374,9 @@ background_opacity: 0.8
 # shell.
 #
 # Default:
+#   - (macOS) /bin/bash --login
 #   - (Linux/BSD) user login shell
+#   - (Windows) powershell
 #shell:
 #  program: /bin/bash
 #  args:
@@ -416,6 +390,9 @@ background_opacity: 0.8
 
 # Send ESC (\x1b) before characters when alt is pressed.
 #alt_send_esc: true
+
+# Offer IPC using `alacritty msg` (unix only)
+#ipc_socket: true
 
 #mouse:
   # Click settings
@@ -491,13 +468,20 @@ background_opacity: 0.8
 #   - Right
 #   - Numeric identifier such as `5`
 #
-# - `action` (see key bindings)
+# - `action` (see key bindings for actions not exclusive to mouse mode)
+#
+# - Mouse exclusive actions:
+#
+#   - ExpandSelection
+#       Expand the selection to the current mouse cursor location.
 #
 # And optionally:
 #
 # - `mods` (see key bindings)
 #mouse_bindings:
-#  - { mouse: Middle, action: PasteSelection }
+#  - { mouse: Right,                 action: ExpandSelection }
+#  - { mouse: Right,  mods: Control, action: ExpandSelection }
+#  - { mouse: Middle, mode: ~Vi,     action: PasteSelection  }
 
 # Key bindings
 #
@@ -566,6 +550,8 @@ background_opacity: 0.8
 #   - ToggleFullscreen
 #   - SpawnNewInstance
 #       Spawn a new instance of Alacritty.
+#   - CreateNewWindow
+#       Create a new Alacritty window from the current process.
 #   - ClearLogNotice
 #       Clear Alacritty's UI warning and error notice.
 #   - ClearSelection
@@ -649,6 +635,10 @@ background_opacity: 0.8
 #       Go to the previous regex in the search history.
 #   - SearchHistoryNext
 #       Go to the next regex in the search history.
+#
+# - macOS exclusive actions:
+#   - ToggleSimpleFullscreen
+#       Enter fullscreen without occupying another space.
 #
 # - Linux/BSD exclusive actions:
 #
@@ -788,9 +778,31 @@ background_opacity: 0.8
   # (Windows only)
   #- { key: Return,   mods: Alt,           action: ToggleFullscreen }
 
-#debug:
+  # (macOS only)
+  #- { key: K,              mods: Command, mode: ~Vi|~Search, chars: "\x0c"                 }
+  #- { key: K,              mods: Command, mode: ~Vi|~Search, action: ClearHistory          }
+  #- { key: Key0,           mods: Command,                    action: ResetFontSize         }
+  #- { key: Equals,         mods: Command,                    action: IncreaseFontSize      }
+  #- { key: Plus,           mods: Command,                    action: IncreaseFontSize      }
+  #- { key: NumpadAdd,      mods: Command,                    action: IncreaseFontSize      }
+  #- { key: Minus,          mods: Command,                    action: DecreaseFontSize      }
+  #- { key: NumpadSubtract, mods: Command,                    action: DecreaseFontSize      }
+  #- { key: V,              mods: Command,                    action: Paste                 }
+  #- { key: C,              mods: Command,                    action: Copy                  }
+  #- { key: C,              mods: Command, mode: Vi|~Search,  action: ClearSelection        }
+  #- { key: H,              mods: Command,                    action: Hide                  }
+  #- { key: H,              mods: Command|Alt,                action: HideOtherApplications }
+  #- { key: M,              mods: Command,                    action: Minimize              }
+  #- { key: Q,              mods: Command,                    action: Quit                  }
+  #- { key: W,              mods: Command,                    action: Quit                  }
+  #- { key: N,              mods: Command,                    action: SpawnNewInstance      }
+  #- { key: F,              mods: Command|Control,            action: ToggleFullscreen      }
+  #- { key: F,              mods: Command, mode: ~Search,     action: SearchForward         }
+  #- { key: B,              mods: Command, mode: ~Search,     action: SearchBackward        }
+
+debug:
   # Display the time it takes to redraw each frame.
-  #render_timer: false
+  render_timer: false
 
   # Keep the log file after quitting Alacritty.
   #persistent_logging: false
