Sway single-file; theme alacritty btop fish neovim;

--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,42 @@
+balena-etcher-electron/
 baloofileinformationrc
+BetterDiscord/
+chromium/
+cmus/cache
+cmus/command-history
+cmus/lib.pl
+cmus/playlists
+cmus/search-history
+dconf/
+discord/
+discordcanary/
 dolphin.kmessagebox
 dolphinrc
+gh/
+gtk-3.0/
+hexchat/
+JetBrains/
 kdeglobals
+Kid3/
 kiorc
 kservicemenurc
 ktrashrc
 LICENSE
 mimeapps.list
-pavucontrol.ini
-QtProject.conf
-trashrc
-balena-etcher-electron/
-BetterDiscord/
-chromium/
-cmus/search-history
-cmus/command-history
-cmus/lib.pl
-cmus/cache
-cmus/playlists
-dconf/
-discord/
-discordcanary/
-gh/
-gtk-3.0/
-hexchat/
-JetBrains/
-Kid3/
 obsidian/
 packet_tracer/
+pavucontrol-qt/pavucontrol-qt.conf
+pavucontrol.ini
 pulse/
 qBittorrent/
+QtProject.conf
 session/
 sublime-text/Installed Packages
 sublime-text/Local
 sublime-text/Log
 supertuxkart/
 Thunar/
+trashrc
 vlc/
 xfce4/
 ytmdl/
