--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -188,7 +188,7 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
 
-# Colors (Catppuccin Macchiato)
+# Colors (Catppuccin Mocha)
 colors:
   # Default colors
   primary:
@@ -214,7 +214,7 @@ colors:
     focused_match:
       foreground: '#1E1E2E' # base
       background: '#A6E3A1' # green
-    bar:
+    footer_bar:
       foreground: '#1E1E2E' # base
       background: '#A6ADC8' # subtext0
 
@@ -689,15 +689,19 @@ live_config_reload: true
 #
 # If the same trigger is assigned to multiple actions, all of them are executed
 # in the order they were defined in.
-#key_bindings:
+key_bindings:
   #- { key: Paste,                                       action: Paste          }
   #- { key: Copy,                                        action: Copy           }
   #- { key: L,         mods: Control,                    action: ClearLogNotice }
   #- { key: L,         mods: Control, mode: ~Vi|~Search, chars: "\x0c"          }
-  #- { key: PageUp,    mods: Shift,   mode: ~Alt,        action: ScrollPageUp,  }
-  #- { key: PageDown,  mods: Shift,   mode: ~Alt,        action: ScrollPageDown }
-  #- { key: Home,      mods: Shift,   mode: ~Alt,        action: ScrollToTop,   }
-  #- { key: End,       mods: Shift,   mode: ~Alt,        action: ScrollToBottom }
+  - { key: Up,        mods: Shift,                      action: ScrollLineUp   }
+  - { key: Down,      mods: Shift,                      action: ScrollLineDown }
+  - { key: Home,      mods: Shift,                      action: ScrollToTop,   }
+  - { key: End,       mods: Shift,                      action: ScrollToBottom }
+  - { key: PageUp,    mods: Control,                    action: ScrollPageUp,  }
+  - { key: PageDown,  mods: Control,                    action: ScrollPageDown }
+  - { key: PageUp,    mods: Shift,                      action: ScrollHalfPageUp}
+  - { key: PageDown,  mods: Shift,                      action: ScrollHalfPageDown}
 
   # Vi Mode
   #- { key: Space,  mods: Shift|Control, mode: ~Search,    action: ToggleViMode            }
