--- a/sway/config
+++ b/sway/config
@@ -1,11 +1,217 @@
-include /home/user/.config/sway/config.d/variables
-include /home/user/.config/sway/config.d/autostart
-include /home/user/.config/sway/config.d/*
+################################################################################
+### Variables ##################################################################
+################################################################################
+
+#	shift	=	Left Shift (0x32), Right Shift (0x3E)
+#	lock	=	Capslock (0x42)
+#	control	=	Left Control (0x25), Right Control (0x69)
+#	mod1	=	Left Alt (0x40), Right Alt (0x6C), Left Meta (0xCD)
+#	mod2	=	Numlock (0x4D)
+#	mod3	=	N/A
+#	mod4	=	Left Super (0x85)[1]. Right Super (0x86)[1],
+#				Left Super (0xCE)[1.1], Left Hyper (0xCF)
+#	mod5	=	ISO level3 Shift (0x5C), Mode switch[2] (0xCB)
+#
+#	[1] Sometimes called Win or the "Windows key"
+#		[1.1] Unknown key
+#	[2] Sometimes called AltGr
+
+set $mod Mod1
+
+# set primary, secondary, and tertiary terminals
+set $term alacritty
+set $term2 kitty
+set $term3 ~/git/st/st
+
+# set menu
+set $menu 'rofi -fuzzy -modi drun,run -show drun'
+
+# set primary browser
+set $browser 'MOZ_ENABLE_WAYLAND=1 firefox'
+
+# set terminal multiplexer
+set $multiplex tmux
+
+# set screenshot utility
+set $scrshot 'sleep 0.2; grimshot copy area'
+
+# set status bar
+set $bar waybar
+
+# set lock screen
+set $lock swaylock
+
+# set notification assistant
+set $notification mako
+
+# set sound and (optional) soundhelper
+set $sound pipewire
+set $soundhelper pipewire-pulse
+
+set $up Up
+set $down Down
+set $left Left
+set $right Right
+
+################################################################################
+### Autostart ##################################################################
+################################################################################
+exec --no-startup-id $notification
+exec --no-startup-id $sound
+exec --no-startup-id [ "" = "$soundhelper" ] && $soundhelper
+
+################################################################################
+### Output #####################################################################
+################################################################################
+# set wallpaper
+output * bg `shuf -en1 /home/user/.wallpapers/.safe/*` fill
+
+# Example configuration:
+#
+#   output HDMI-A-1 resolution 1920x1080 position 1920,0
+#
+# You can get the names of your outputs by running: swaymsg -t get_outputs
+
+# monitor config
+#desktop
+output HDMI-A-1	resolution 1920x1080	position 0,0
+#laptop
+output LVDS-1	resolution 1366x768		position 0,0
+
+################################################################################
+### Input configuration ########################################################
+################################################################################
+#
+# Example configuration:
+#
+#   input "2:14:SynPS/2_Synaptics_TouchPad" {
+#       dwt enabled
+#       tap enabled
+#       natural_scroll enabled
+#       middle_emulation enabled
+#   }
+#
+# You can get the names of your inputs by running: swaymsg -t get_inputs
+# Read `man 5 sway-input` for more information about this section.
+
+input type:keyboard {
+	# setting key repeat speed
+	repeat_delay 200
+	repeat_rate 30
+}
+
+################################################################################
+# Start Programs ###############################################################
+################################################################################
+# Start menu
+bindsym $mod+e exec $menu
+
+# Screenshot
+bindsym Print exec $scrshot
+
+# Launch Terminals
+bindsym $mod+Return exec $term
+bindsym $mod+Shift+Return exec $term2
+bindsym $mod+Control+Return exec $term3
+
+# Launch Browser
+bindsym $mod+Backspace exec $browser
+
+# Kill focused window
+bindsym $mod+Shift+q kill
+
+# Start your launcher
+bindsym $mod+d exec $menu
+
+# Drag floating windows by holding down $mod and left mouse button.
+# Resize them with right mouse button + $mod.
+# Despite the name, also works for non-floating windows.
+# Change normal to inverse to use left mouse button for resizing and right
+# mouse button for dragging.
+floating_modifier $mod normal
+
+# Reload the configuration file
+bindsym $mod+Shift+r reload
+
+# Exit sway (logs you out of your Wayland session)
+bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+
+################################################################################
+### Moving around ##############################################################
+################################################################################
+# Move your focus around
+bindsym $mod+$left focus left
+bindsym $mod+$down focus down
+bindsym $mod+$up focus up
+bindsym $mod+$right focus right
+
+# Move the focused window with the same, but add Shift
+bindsym $mod+Shift+$left move left
+bindsym $mod+Shift+$down move down
+bindsym $mod+Shift+$up move up
+bindsym $mod+Shift+$right move right
+
+################################################################################
+### Workspaces #################################################################
+################################################################################
+# Define names for default workspaces for which we configure key bindings later on.
+# We use variables to avoid repeating the names in multiple places.
+set $ws1 "1: Terminal"
+set $ws2 "2: Browser"
+set $ws3 "3: Discord"
+set $ws4 "4: Text"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws10 "10: Music"
+
+# switch to workspace
+bindsym $mod+1 workspace $ws1
+bindsym $mod+2 workspace number $ws2
+bindsym $mod+3 workspace number $ws3
+bindsym $mod+4 workspace number $ws4
+bindsym $mod+5 workspace number $ws5
+bindsym $mod+6 workspace number $ws6
+bindsym $mod+7 workspace number $ws7
+bindsym $mod+8 workspace number $ws8
+bindsym $mod+9 workspace number $ws9
+bindsym $mod+0 workspace number $ws10
+
+# move focused container to workspace
+bindsym $mod+Shift+1 move container to workspace $ws1
+bindsym $mod+Shift+2 move container to workspace number $ws2
+bindsym $mod+Shift+3 move container to workspace number $ws3
+bindsym $mod+Shift+4 move container to workspace number $ws4
+bindsym $mod+Shift+5 move container to workspace number $ws5
+bindsym $mod+Shift+6 move container to workspace number $ws6
+bindsym $mod+Shift+7 move container to workspace number $ws7
+bindsym $mod+Shift+8 move container to workspace number $ws8
+bindsym $mod+Shift+9 move container to workspace number $ws9
+bindsym $mod+Shift+0 move container to workspace number $ws10
+
+################################################################################
+### Gaps and borders ###########################################################
+################################################################################
+default_border pixel 2
+default_floating_border pixel 2
+hide_edge_borders both
+
+gaps outer 8
+gaps inner 3
+
+################################################################################
+### Layout stuff ###############################################################
+################################################################################
+# You can "split" the current object of your focus with
+# $mod+k, to toggle between horizontal and vertical splits.
+bindsym $mod+k split toggle
 
 # Switch the current container between different layout styles
-bindsym $mod+o layout stacking
-bindsym $mod+Comma layout tabbed
-bindsym $mod+Period layout toggle split
+bindsym $mod+i layout stacking
+bindsym $mod+o layout tabbed
+bindsym $mod+p layout toggle split
 
 # Make the current focus fullscreen
 bindsym $mod+f fullscreen
@@ -16,9 +222,19 @@ bindsym $mod+Shift+space floating toggle
 # Swap focus between the tiling area and the floating area
 bindsym $mod+space focus mode_toggle
 
-# Move focus to the parent container
-bindsym $mod+a focus parent
+for_window [app_id="firefox"] opacity 0.95
+assign [app_id="firefox"] "2: Browser"
+for_window [app_id="firefox" title="Picture-in-Picture"] floating enable; sticky enable
+for_window [app_id="firefox" title="Firefox — Sharing Indicator"]  kill
 
+assign [app_id="discord"] "3: Discord"
+
+for_window [app_id="sublime_text"] floating enable
+for_window [class="Tor Browser"] floating enable, borders normal
+
+################################################################################
+### Scratchpad #################################################################
+################################################################################
 # Sway has a "scratchpad", which is a bag of holding for windows.
 # You can send windows there and get them back later.
 
@@ -28,3 +244,54 @@ bindsym $mod+Shift+minus move scratchpad
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
 bindsym $mod+minus scratchpad show
+
+################################################################################
+### Resizing containers ########################################################
+################################################################################
+mode "resize" {
+	# These bindings trigger as soon as you enter resize mode
+
+	# left will shrink the containers width
+	# right will grow the containers width
+	# up will shrink the containers height
+	# down will grow the containers height
+	bindsym Left resize grow width 10 px or 10 ppt
+	bindsym Right resize shrink width 10 px or 10 ppt
+	bindsym Up resize shrink height 10 px or 10 ppt
+	bindsym Down resize grow height 10 px or 10 ppt
+
+	# back to normal: Enter or Escape or $mod+r
+	bindsym Return mode "default"
+	bindsym Escape mode "default"
+	bindsym $mod+r mode "default"
+}
+
+# move window
+mode "move" {
+	# back to normal: Enter or Escape or $mod+m
+	bindsym Return mode "default"
+	bindsym Escape mode "default"
+	bindsym $mod+m mode "default"
+}
+
+bindsym $mod+r mode "resize"
+bindsym $mod+m mode "move"
+
+################################################################################
+### Font #######################################################################
+################################################################################
+# Font for window titles. Will also be used by the bar unless a different font
+# is used in the bar {} block below.
+font pango:Hack Mono 8
+
+# This font is widely installed, provides lots of unicode glyphs, right-to-left
+# text rendering and scalability on retina/hidpi displays (thanks to pango).
+font pango:DejaVu Sans Mono 8
+
+################################################################################
+### Status Bar #################################################################
+################################################################################
+# Read `man 5 sway-bar` for more information about this section.
+bar {
+	swaybar_command $bar
+}
